# mera-ai

./: .cursorignore  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.mem0  INTERACTION_GUIDE.md  LANGFUSE_INTEGRATION_SUMMARY.md  LANGSMITH_VS_LANGFUSE.md  OBSIDIAN_PLUGIN_GUIDE.md  README.md  docker-compose.yml  env.example  how will this utilise the multi-sub-agent system a.md  implemtation-conversation.md  pyproject.toml  requirements-base.txt  requirements-dev.txt  requirements.txt  start.sh  stop.sh
app/: __init__.py  api.py  cache.py  config.py  context_monitor.py  core.py  crewai.py  db.py  embeddings.py  error_handler.py  langchain_chains.py  langchain_retrievers.py  langchain_tools.py  langfuse_client.py  llm_client.py  main.py  memory_chroma.py  memory_compaction.py  memory_factory.py  memory_interface.py  memory_mem0.py  models.py  multi_agent_context_system.py  observability.py  obsidian_client.py  orchestrator.py  orchestrator_langchain.py  prompts.py  review_system.py  spaces.py
app/adapters/: __init__.py  chroma.py  obsidian.py  (+1 more)
clickhouse-config/: config.xml
docs/: spaces_complete_overview.md  spaces_quick_start.md
frontend/: README.md  package-lock.json  package.json  tailwind.config.ts
obsidian-plugin/: .gitignore  INSTALLATION.md  README.md  esbuild.config.mjs  main.ts  manifest.json  memory-manager.ts  modal.ts  package-lock.json  package.json  settings.ts  tsconfig.json
scripts/: init-multiple-databases.sh  migrate_mem0_to_chroma.py  start_all_services.py  start_mem0_server.py  stop_all_services.py
tests/: conftest.py  test_api_chat_with_context.py  test_config.py  test_context_and_compaction.py  test_crewai_orchestrator.py  test_llm_client.py  test_multi_agent_context_system.py  test_multi_agent_real_io.py  test_obsidian_real.py  test_orchestrator.py  test_orchestrator_migration.py  test_review_integration.py
(+52 files in other folders)
